NotRedditApp/src/app/post/post.component.scss
@import "../../../node_modules/bootstrap/scss/bootstrap";
@mixin vertical-align {
  position: relative;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}
.rank{
  font-size: 1em;
}
.post {
  border: solid black;
  overflow-wrap:break-word;
}
.rank-block {
  border: solid red;
  max-height: 100%;
}
.img-block {
  border: solid blue;
  width: 140px;
  height: 140px;
}
.post-img {
  height: 100%;
}
.voteBtn {
  width: 20px ;
  height: 20px  ;
}
.voteBtn-Up:Hover {
  fill: #00FF7F;
}
.voteBtn-Down:Hover {
  fill: #FF0000;
}
.post-row {
  margin-bottom: 10px;
  min-height: 150px;
  border: solid green;
}
.v-align {
  @include vertical-align();
}
@include media-breakpoint-up(sm) {
  .rank {
    font-size: 0.8rem;
  }
}

@include media-breakpoint-up(md) {
  .rank {
    font-size: 1rem;
  }
}

@include media-breakpoint-up(lg) {
  .rank {
    font-size: 1.6rem;
  }
}

